kubernetes/apps/default/forgejo/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`git.f9.casa`)
      kind: Rule
      services:
        - name: forgejo
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
